--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         <div class="tab">
             <div class="ddtt">
-                <img class="slideC" src="/dot-1.jpeg" alt="" aria-disabled="">
+                <img class="slideC" src="/dot-1.png" alt="" aria-disabled="">
                 <img class="slideC" src="/dot-2.jpeg" alt="">
                 <img class="slideC" src="/dot-3.jpeg" alt="">
             </div>
