--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <div class="tab">
             <div class="ddtt">
                 <img class="slideC" src="/dot-1.png" alt="" aria-disabled="">
-                <img class="slideC" src="/dot-2.jpeg" alt="">
-                <img class="slideC" src="/dot-3.jpeg" alt="">
+                <img class="slideC" src="/dot-2.png" alt="">
+                <img class="slideC" src="/dot-3.png" alt="">
             </div>
         </div>
  
