--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         </div>
         <div class="paragraf">
             <div class="note">
-                <img class="slideB" src="/text2.jpeg" alt="" aria-disabled="">
-                <img class="slideB" src="/text1.jpeg" alt="">
-                <img class="slideB" src="/text3.jpeg" alt="">
+                <img class="slideB" src="/text2.png" alt="" aria-disabled="">
+                <img class="slideB" src="/text1.png" alt="">
+                <img class="slideB" src="/text3.png" alt="">
             </div>
         </div>
 
