--- a/index.html
+++ b/index.html
@@ -140,26 +140,26 @@
         </div>
         <div class="paragraf">
             <div class="note">
-                <img class="slideB" src="/text2.png" alt="" aria-disabled="">
-                <img class="slideB" src="/text1.png" alt="">
-                <img class="slideB" src="/text3.png" alt="">
+                <img class="slideB" src="text2.png" alt="" aria-disabled="">
+                <img class="slideB" src="text1.png" alt="">
+                <img class="slideB" src="text3.png" alt="">
             </div>
         </div>
 
         <div class="tab">
             <div class="ddtt">
-                <img class="slideC" src="/dot-1.png" alt="" aria-disabled="">
-                <img class="slideC" src="/dot-2.png" alt="">
-                <img class="slideC" src="/dot-3.png" alt="">
+                <img class="slideC" src="dot-1.png" alt="" aria-disabled="">
+                <img class="slideC" src="dot-2.png" alt="">
+                <img class="slideC" src="dot-3.png" alt="">
             </div>
         </div>
  
     </div>
-    <script src="/script.js"></script>
-    <script src="/app.js"></script>
-    <script src="/button.js"></script>
-    <script src="/text.js"></script>
-    <script src="/dot.js"></script>
+    <script src="script.js"></script>
+    <script src="app.js"></script>
+    <script src="button.js"></script>
+    <script src="text.js"></script>
+    <script src="dot.js"></script>
    
 </body>
 </html>
