--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="set-b2">
                     <div>
-                        <a href="" ><img src="/mypic.jpg" class="dp" alt=""></a>
+                        <a href="" ><img src="mypic.jpg" class="dp" alt=""></a>
                     </div>
                 </div>
     
